# connext

./: build_rustdesk.ps1  script.js
connexr-derp/: config.yaml  go.mod
connexr-derp/certs/: server.crt  server.key
connexr-derp/cmd/derp/: main.go
connexr-derp/internal/derpserver/: server.go
connext-backend/: .env  go.mod  go.sum  main.go
connext-backend/internal/database/: db.go
connext-ui/: next.config.ts  package-lock.json  package.json
connext_desktop/: README.md  pubspec.yaml
connext_desktop/lib/: main.dart
connext_desktop/linux/: CMakeLists.txt
connext_desktop/test/: widget_test.dart
connext_desktop/web/: index.html  manifest.json
connext_desktop/windows/: CMakeLists.txt
connext_host/: file_service.go  go.mod  go.sum  input_handler.go  main.go  screen_capture.go  signaling_server.go
screen_capture_plugin/: .metadata  README.md  pubspec.yaml
screen_capture_plugin/example/: README.md  pubspec.yaml
screen_capture_plugin/lib/: screen_capture_plugin.dart  screen_capture_plugin_method_channel.dart  screen_capture_plugin_platform_interface.dart
screen_capture_plugin/test/: screen_capture_plugin_method_channel_test.dart  screen_capture_plugin_test.dart
screen_capture_plugin/windows/: CMakeLists.txt  screen_capture_plugin.cpp  screen_capture_plugin.h  screen_capture_plugin_c_api.cpp  screen_video_capturer.cpp  screen_video_capturer.h
screen_capture_plugin/windows/include/screen_capture_plugin/: screen_capture_plugin.h  screen_capture_plugin_c_api.h
screen_capture_plugin/windows/test/: screen_capture_plugin_test.cpp
(+145 files in other folders)
